# grasp2alm

./: .gitignore  CHANGELOG.md  README.md  beam.py  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
.github/: gh-pages.yml
.github/workflows/: gh-pages.yml  test.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  grasp2alm.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  grasp2alm.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: dataclasses.html  index.html
docs/_build/html/_modules/grasp2alm/: beam2alm.html  beam_cut.html  beam_grid.html  beam_map.html  beam_polar.html
docs/_build/html/_sources/: grasp2alm.rst.txt  modules.rst.txt
docs/source/: conf.py  cut.rst  gauss_beam.rst  grid.rst  index.rst  installation.rst  mapping.rst  reference.rst  stokes.rst  tutorial.ipynb
docs/source/_templates/autosummary/: class.rst
grasp2alm/: __init__.py  beam2alm.py  beam_cut.py  beam_gauss.py  beam_grid.py  beam_map.py  beam_polar.py  grasp2alm.py  version.py
grasp2alm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
grasp2alm/.ipynb_checkpoints/: beam_cut-checkpoint.py
grasp2alm/test/: test.py  test_hello.py
levels_beam/: __init__.py  levels_beam.py
levels_beam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: gauss_beam.ipynb  tutorial.ipynb
test/: test_beam_cut.py  test_beam_gauss.py  test_beam_grid.py  test_gauss_beam2alm.py  test_main.py
test/beam_files/: unit_test.cut
