
[tool.poetry]
name = "grasp2alm"
version = "0.1.0"
description = "Package supporting conversion from GRASP beam format to spherical harmonic coefficients for CMB experiments, conversion to expansion coefficients for spherical harmonics, etc."
authors = ["yusuke-takase <takase_y@s.okayama-u.ac.jp>"]
license = "GPL3"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
numpy = "^1.23"
healpy = "^1.15.0"
matplotlib = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
